--- a/fish_game/fish_game.css
+++ b/fish_game/fish_game.css
@@ -2,4 +2,5 @@
     width: 800px;
     height: 500px;
     border: 4px solid black;
+    background: linear-gradient(to bottom, lightblue, darkblue, black);
 }
